# gofmt.rs

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
src/: ast.rs  formatter.rs  lib.rs  parser.rs  scanner.rs  source.rs  tabwriter.rs  tokens.rs
tests_data/: alignment.golden  array_type.golden  array_type.input  bad_return_composite_lit_indent.golden  bad_return_composite_lit_indent.input  binary_expr.golden  binary_expr.input  binary_expr_space.golden  binary_expr_space.input  block.golden  block.input  block_comment.golden  block_comment.input  call_args.golden  call_args.input  call_normal.golden  call_normal.input  call_stmt.golden  call_stmt.input  case_newlines.golden  case_newlines.input  chan_type.golden  chan_type.input  comment_before_label.golden  comment_before_label.input  comment_in_paran.golden  comment_in_paran.input  comment_in_the_empty_case.golden  comment_in_the_empty_case.input  comments.golden  complit.golden  composite_multiline.golden  composite_multiline.input  composite_slice.golden  composite_slice.input  compositelit_as_param.golden  compositelit_as_param.input  const_group_comment.golden  const_group_comment.input  decl_var_group.golden  (+103 more)
tests_data/gofumpt/: assignment-newlines.golden  assignment-newlines.input  block-empty.golden  block-empty.input  block-single.golden  block-single.input  cgo.golden  cgo.input  clothe-returns.golden  clothe-returns.input  comment-spaced.golden  comment-spaced.input  composite-literals-leading-lines.golden  composite-literals-leading-lines.input  composite-multiline.golden  composite-multiline.input  (+34 more)
